tests/baselines/reference/project/declarationsGlobalImport/amd/declarationsGlobalImport.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== glo_m4.ts (0 errors) ====
    
    export class d {
    };
    export var x: d;
    export function foo(): d {
        return new d();
    }
    
    
==== useModule.ts (0 errors) ====
    import glo_m4 = require("glo_m4");
    export var useGlo_m4_x4 = glo_m4.x;
    export var useGlo_m4_d4 = glo_m4.d;
    export var useGlo_m4_f4 = glo_m4.foo();